--- a/src/main/resources/static/css/booking/booking_style.css
+++ b/src/main/resources/static/css/booking/booking_style.css
@@ -11,7 +11,9 @@ nav {height:40px; background-color:#E3871F;}
 .reserve .real-time-reserved {background-color:#B1520F;}
 .reserve .confirm {background-color: #CF6317;}
 .reserve .inquiry {background-color:#B1520F;}
-.reserve-confirm {color:#fff; font-size: 25px; }
+.reserve-confirm {color:#fff; font-size: 25px;}
+
+.reserve-form {position: absolute;  z-index: 10;left: calc(50% - 400px);}
 
 footer {height:80px;}
 footer .address {font-size:12px; color:#999;}
